# dense-passage-retrieval

./: .gitignore  Makefile  README.md  requirements.txt  setup.cfg
dpr/: __init__.py  dataset.py  encoder.py  main.py  model.py  reader.py  retriever.py  test_model.py  trainer.py  utils.py
tests/: test_dataset.py  test_encoder.py  test_model.py  test_reader.py  test_retriever.py  test_utils.py
