[metadata]
name = dense-passage-retrieval
version = 0.0.1
author = Tsimur Hadeliya
description =
    Implementation of Dense Passage Retrieval for Open-Domain Question Answering

[options]
package_dir =
packages = dpr
python_requires = >=3.7.8
install_requires =
    gcsfs==2021.10.0
    torch==1.7.1
    pytorch-lightning==1.0.2
    transformers==4.1.0

[options.extras_require]
dev =
        pytest==6.2.5
        black==21.9b0